access page spec files

--- a/src/app/users/public/access/access.template.html
+++ b/src/app/users/public/access/access.template.html
@@ -41,7 +41,7 @@
 
           <!-- Cancel -->
           <div class="usa-width-one-sixth">
-            <button class="usa-button-transparent" (click)="onCancelRequestClick(req.id, i)">
+            <button class="usa-button-transparent" (click)="onCancelRequestClick(req.id)">
               <i class="fa fa-close"></i>
               <a>Cancel</a>
             </button>
