[SAM-6827] Support adding labels and individual validation to textareas in checkbox toggled texture component

--- a/src/app/assistance-listing/components/checkbox-toggled-textarea.template.html
+++ b/src/app/assistance-listing/components/checkbox-toggled-textarea.template.html
@@ -15,7 +15,10 @@
 
     <ng-container *ngFor="let option of checkboxOptions; let i = index;">
       <samTextArea [name]="name + '-textarea' + i"
+                   [label]="textareaLabel[i]"
+                   [required]="textareaRequired[i]"
                    [hidden]="textareaHidden[i]"
+                   [control]="validationGroup.get('textarea'+i)"
                    [formControlName]="'textarea'+i"
       ></samTextArea>
     </ng-container>
