--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -168,8 +168,15 @@
     <!--Should I apply?-->
     <section id="program-application-criteria">
       <a name="#/programs/{{programID}}/view#criteria-for-applying"></a>
-      <h2 id="criteria-for-applying">Criteria for Applying</h2>
-
+      <div class="usa-grid-full">
+        <div class="usa-width-two-thirds">
+          <h2 id="criteria-for-applying">Criteria for Applying</h2>
+        </div>
+        <div class="usa-width-one-third">
+          <a *ngIf="program.status?.code!='published'" [routerLink]="['/programs',program.id, 'edit', 'criteria-information']">Edit</a>
+          <i class="fa fa-pencil fal-edit" aria-hidden="true" *ngIf="program.status?.code!='published'" [routerLink]="['/programs',program.id, 'edit', 'criteria-information']"></i>
+        </div>
+      </div>
       <h3>Types of Assistance:</h3>
 
       <p *ngIf="dictionaries && dictionaries.assistance_type">
