--- a/src/app/assistance-listing/assistance-listing-operations/sections/criteria-information/criteria-information.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/criteria-information/criteria-information.template.html
@@ -51,7 +51,7 @@
     [control]="falCriteriaForm.controls['awardedDesc']"
     [name]="'awarded-description-input'"
     [label]="''"
-    formControlName="awardedDes"></samTextArea>
+    formControlName="awardedDesc"></samTextArea>
   <h4>Use and Use Restrictions</h4>
    <sam-autocomplete [labelText]="'Use of Assistance'"
                     [options]="assiUsageTypesoptions"
