--- a/src/app/role-management/manage-request/manage-request.page.html
+++ b/src/app/role-management/manage-request/manage-request.page.html
@@ -1,50 +1,55 @@
-<div class="manage-request">
-  <div class="usa-grid">
-    <div class="usa-width-one-fourth">
-      <button class="usa-btn-trasparent" [routerLink]="['role-workspace']"><i class="fa fa-arrow-circle-left"></i>&nbsp;Back to Workspace</button>
-    </div>
-    <div class="usa-width-three-fourths">
-      <h1>Access Request</h1>
-      <div class="request-description-block">
-        <div class="usa-grid-full">
-          <div class="usa-width-one-sixth">
-            <strong>Domain:</strong>
-          </div>
-          <div class="usa-width-five-sixths">
-            Federal Assistance
-          </div>
+<div class="manage-request usa-grid m_T-4x">
+  <div class="usa-width-one-fourth">
+    <button class="usa-button usa-button-transparent" [routerLink]="['/role-workspace']"><i class="fa fa-arrow-circle-left"></i>&nbsp;Back to Workspace</button>
+  </div>
+  <div class="usa-width-three-fourths">
+    <!--<div class="usa-alert usa-alert-error"><code>{{request | json}}</code></div>-->
+    <h1>Access Request</h1>
+    <div class="description-block">
+      <div class="usa-grid-full">
+        <div class="usa-width-one-fourth">
+          <strong>Domain:</strong>
         </div>
-        <div class="usa-grid-full">
-          <div class="usa-width-one-sixth">
-            <strong>Requestor:</strong>
-          </div>
-          <div class="usa-width-five-sixths">
-            Alexandria Widtherspoon
-          </div>
+        <div class="usa-width-three-fourths">
+          Federal Assistance
         </div>
-        <div class="usa-grid-full">
-          <div class="usa-width-one-sixth">
-            <strong>Supervisor Name:</strong>
-          </div>
-          <div class="usa-width-five-sixths">
-            John Adams
-          </div>
-        </div>
-        <div class="usa-grid-full">
-          <div class="usa-width-one-sixth">
-            <strong>Supervisor Email</strong>
-          </div>
-          <div class="usa-width-five-sixths">
-            John.Admin@gsa.gov
-          </div>
-        </div>
-        <div><strong>Message from Requestor:</strong></div>
-        <p>
-          <em>
-          I need to have access to GSA as an Agency User because I want to be able to access reports, administer to employees undersnath me and view data only
-          </em>
-        </p>
       </div>
+      <div class="usa-grid-full m_T-2x">
+        <div class="usa-width-one-fourth">
+          <strong>Requestor:</strong>
+        </div>
+        <div class="usa-width-three-fourths">
+          Alexandria Widtherspoon
+        </div>
+      </div>
+      <div class="usa-grid-full m_T-2x">
+        <div class="usa-width-one-fourth">
+          <strong>Supervisor Name:</strong>
+        </div>
+        <div class="usa-width-three-fourths">
+          John Adams
+        </div>
+      </div>
+      <div class="usa-grid-full m_T-2x">
+        <div class="usa-width-one-fourth">
+          <strong>Supervisor Email:</strong>
+        </div>
+        <div class="usa-width-three-fourths">
+          John.Admin@gsa.gov
+        </div>
+      </div>
+      <div class="m_T-2x"><strong>Message from Requestor:</strong></div>
+      <p>
+        <em>
+        I need to have access to GSA as an Agency User because I want to be able to access reports, administer to employees undersnath me and view data only
+        </em>
+      </p>
+    </div>
+    <div class="m_T-2x">
+      <samRadioButton [options]="options" label="How do you want to respond?" name='request-action'></samRadioButton>
+    </div>
+    <div class="clearfix">
+      <button class="pull-right usa-button usa-button-primary" (click)="onSubmitClick()">Submit</button>
     </div>
   </div>
-</div>
+</div><!-- page -->
