[SAM-6198] Integrate agency picker in header information form page

--- a/src/app/assistance-listing/assistance-listing-operations/sections/header-information/header-information.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/header-information/header-information.template.html
@@ -13,6 +13,15 @@
            [label]="'Popular Name'"
            formControlName="alternativeNames"></samText>
 
+  <agencyPicker [label]="'Federal Agency'"
+                [multimode]="false"
+                [advancedMode]="false"
+                [required]="true"
+                [initial]="agency ? [agency] : []"
+                (organization)="onOrganizationChange($event)"
+                [levelLimit] = '2'>
+  </agencyPicker>
+
   <samNumber [maxlength]="3"
              [minlength]="3"
              [required]="true"
