[SAM-6827] Add missing word to records hint

--- a/src/app/assistance-listing/assistance-listing-operations/sections/compliance-requirements/compliance-requirements.page.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/compliance-requirements/compliance-requirements.page.html
@@ -23,7 +23,7 @@
   ></samCheckboxToggledTextarea>
 
   <samTextArea [label]="'Records'"
-               [hint]="'Describe required records. Include the time period when the records must be'"
+               [hint]="'Describe required records. Include the time period when the records must be kept.'"
                [name]="'compliance-records'"
                [control]="records"
                [formControlName]="'records'"
