--- a/src/styles/pages/_assistance-listing-operations.scss
+++ b/src/styles/pages/_assistance-listing-operations.scss
@@ -38,7 +38,20 @@
     padding: 12px 5px;
   }
 
-  .falobli-selectappli-margin {
+  .fal-label-margin {
     margin-top: 12px;
+    margin-bottom: -1em;
+  }
+
+  .fal-obligations-label {
+    font-weight: bold;
+    color: black;
+    font-size:30px;
+    margin-top: 10px;
+    margin-bottom: 0em;
+  }
+
+  .text-radio-padding {
+    padding-left: 20px;
   }
 }
