[SAM-6827] Fix bug with missing audits header

--- a/src/app/assistance-listing/assistance-listing-operations/sections/compliance-requirements/compliance-requirements.page.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/compliance-requirements/compliance-requirements.page.html
@@ -18,6 +18,7 @@
                               [formControlName]="'reports'"
   ></samCheckboxToggledTextarea>
 
+  <h2>Audits</h2>
   <samCheckboxToggledTextarea [options]="auditsConfig"
                               [formControlName]="'audits'"
   ></samCheckboxToggledTextarea>
