[SAM-6199] Limit max width of agency picker

--- a/src/styles/pages/_assistance-listing-operations.scss
+++ b/src/styles/pages/_assistance-listing-operations.scss
@@ -13,6 +13,10 @@
     max-width: 480px;
   }
 
+  agencyPicker .organization-container {
+    max-width: 480px;
+  }
+
   .sticky-label{
     color: #a6a6a6;
     letter-spacing: -0.3px;
