bug fix: using title as an input creates a hover over tooltip for that component

--- a/src/app/role-management/permission-selector/permission-selector.html
+++ b/src/app/role-management/permission-selector/permission-selector.html
@@ -1,6 +1,6 @@
 <div class="permission-selector">
   <div class="permission-selector-title">
-    <strong>{{title}}</strong>
+    <strong>{{titleText}}</strong>
   </div>
   <div class="permissions-body">
 
