--- a/src/app/assistance-listing/assistance-listing-operations/sections/authorizations/authorization-subform.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/authorizations/authorization-subform.template.html
@@ -6,12 +6,15 @@
 
     <ng-container *ngFor="let authGrp of falAuthSubForm.controls.authorizations.controls; let i=index">
       <div [formGroupName]="i" [class.hide]="authIndex !== i">
-        <samCheckbox
+        <!--<samCheckbox
            [control]="falAuthSubForm.controls['authType']"
            [hint]="'Please select all that apply'"
            [name]="'authType'"
            [options]="checkboxConfig.options"
-           formControlName="authType"></samCheckbox>
+           formControlName="authType"></samCheckbox>-->
+        <samCheckboxToggledGroupTextarea [options]="authTypeConfig"
+                                    [formControlName]="'authType'"
+        ></samCheckboxToggledGroupTextarea>
 
         <samButton buttonText="Cancel" (onClick)="onSubFormCancelClick(i)"></samButton>
         <samButton buttonText="Confirm" (onClick)="onConfirmClick()"></samButton>
